fixing contrast issues

--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -352,6 +352,7 @@ footer .footer-contact {
     padding: 0;
     width: 100%;
     height: 100%;
+    display: none;
 }
 
 .bg-slideshow li {
@@ -563,6 +564,7 @@ footer .footer-contact {
 .spotlight-container .content-container p,
 .spotlight-container .content-container em {
     color: #fff;
+    font-weight: 700;
     text-shadow: 0px 1px 15px rgba(0,0,0,1);
 }
 
